Enabled the monitoring and added the jmx container changes

--- a/microgateway/values.yaml
+++ b/microgateway/values.yaml
@@ -82,3 +82,7 @@ wso2:
         host: wso2-elasticsearch-master
         username: "elastic"
         password: "changeme"
+
+
+  monitoring:
+    enabled: true
