--- a/microgateway/templates/microgateway-deployment.yaml
+++ b/microgateway/templates/microgateway-deployment.yaml
@@ -132,6 +132,8 @@ spec:
         - name: microgateway-prometheus-exporter-conf
           mountPath: /home/wso2carbon/prometheus/config.yaml
           subPath: config.yaml
+        - name: microgateway-bin
+          mountPath: /home/wso2carbon/wso2-config-volume/bin
         {{ end }}
         {{ if .Values.wso2.centralizedLogging.enabled }}
         - name: shared-logs
@@ -202,4 +204,7 @@ spec:
         - name: microgateway-prometheus-exporter-conf
           configMap:
             name: microgateway-prometheus-exporter-conf
+        - name: microgateway-bin
+          configMap:
+            name: microgateway-bin
         {{ end }}
