--- a/microgateway/values.yaml
+++ b/microgateway/values.yaml
@@ -83,6 +83,18 @@ wso2:
         username: "elastic"
         password: "changeme"
 
-
+    # Configurations for Prometheus monitoring
   monitoring:
+    # Enable Prometheus monitoring. This will start Prometheus exporter on port 2222 and deploy Service monitors
+    # for JVM, JMX and Blackbox exporter for Login calls
     enabled: true
+    prometheus:
+      serviceMonitor:
+        # If the black box exporter is deployed in a different Namespace
+        #          blackBoxNamespace:
+        # Prometheus Operator labels to identify Service monitors
+        labels:
+          release: monitoring
+      # Job name of the JMX events
+      jmxJobName: "jmx"
+
