--- a/microgateway/values.yaml
+++ b/microgateway/values.yaml
@@ -95,6 +95,6 @@ wso2:
         # Prometheus Operator labels to identify Service monitors
         labels:
           release: monitoring
-      # Job name of the JMX events
+      # Job name of the JMX eventss
       jmxJobName: "jmx"
 
